added tournament tree
